# research_accelerator

./: .gitignore  CHART_REBUILD_SPEC.md  PHASE2_READINESS_ASSESSMENT.md  PROJECT_STATE.md  README.md  SYNTHETIC_OLYA_METHOD_v0.4.yaml  SYNTHETIC_OLYA_METHOD_v0.5.yaml  SYNTHETIC_OLYA_METHOD_v0.6.yaml  SYNTHETIC_OLYA_METHOD_vLOCK.yaml  VARIANT_INTEGRATION_INVESTIGATION.md  eval.py  pyproject.toml  run.py  search.py
.factory/: init.sh  services.yaml
build_plan/: 00_BUILD_PLAN_INDEX.md  01_RUNTIME_CONFIG_SCHEMA.yaml  02_MODULE_MANIFEST.md  03_RIVER_ADAPTER_SPEC.md  04_PHASE1_MISSION_BRIEF.md  05_ADVISORY_SYNTHESIS.yaml  ADVISORY_REVIEW_BRIEF.yaml  VALIDATION_ASSERTIONS_M1_COMPARISON_CORE.md  VALIDATION_ASSERTIONS_M2_ANALYTICS_AND_ANNOTATION.md  VALIDATION_ASSERTIONS_M2_GROUND_TRUTH_SCORING.md  VALIDATION_ASSERTIONS_M3_PARAMETER_SEARCH.md  VALIDATION_ASSERTIONS_PARAM_EXTRACTION_AND_RIVER_ADAPTER.md  VALIDATION_ASSERTIONS_VARIANT_ARCHITECTURE.md
configs/: locked_baseline.yaml  search_space.yaml
data/: eurusd_1m_2024-01-07_to_2024-01-12.csv
pipeline/: generate_advisor_export_v3.py  preprocess_data_v2.py
reports/: run_walk_forward.py  walk_forward_stability_2025-09_2026-02.yaml
research/: ICT_PRIMITIVES_RESEARCH_PACK.md  PERPLEXITY_BRIEF_ICT_PRIMITIVES.md  PERPLEXITY_PHASE2_BRIEF.md  RESEARCH_SUPPLEMENT_FOR_OPUS.md  RESEARCH_VS_V05_GAP_ANALYSIS (1).md  RG1_IFVG_DEEP_RESEARCH.md  RG2_BPR_DEEP_RESEARCH.md  RG5_DISPLACEMENT_RESEARCH.md  research_fvg_vi.md  research_sessions_pdh_asia.md  research_swing_points.md  research_tier2_primitives.md  sanity_band_results.md
(+300 files in other folders)
